--- a/style.css
+++ b/style.css
@@ -24,6 +24,14 @@ header{
     border-radius: 3rem;
     z-index: 1000; /*faz com que o header fique por cima de outros elementos*/
 }
+.light-backgraund{
+    display: flex;
+    font-size: 2.5rem;
+    padding-top: 0.8rem;
+    left: 9%;
+    position: fixed;
+    transition: 0.3s ease-in-out;
+}
 .logo{
     color: white;
     font-size: 1.3rem;
@@ -100,9 +108,9 @@ section{
 }
 
 .about img {
-    width: 45vw;
+    width: 30vw;
     border-radius: 50%;
-    height: 45vw;
+    height: 30vw;
 }
 .info-box{
     display: flex;
@@ -110,7 +118,7 @@ section{
     text-align: center;
     align-items: center;
     justify-content: center;
-    gap: 1.5rem;
+    gap: 0.6rem;
 }
 .info-box h3 {
     font-size: 1.8rem;
@@ -122,7 +130,7 @@ section{
     font-weight: 600;
 }
 .info-box span {
-    background: linear-gradient(to right, rgb(11, 150, 192), rgb(19, 17, 75));
+    background: linear-gradient(to right, rgb(11, 150, 192), rgb(89, 87, 134));
     background-clip: text;
     color: transparent;
     font-size: 2rem;
@@ -136,5 +144,145 @@ section{
     padding: 0.5rem 1.5rem;
     border: 2px solid black ;
     cursor: pointer;
+    font-weight: 500;
+    text-wrap: nowrap;
+    transition: 0.2s ease-in-out;
 }
+ .btn:hover {
+    background-color: black;
+    color: white;
+ }
+ .socials {
+    display: flex;
+    gap: 2rem;
+}
+.socials i{
+    font-size: 2.5rem;
+    cursor: pointer;
+    transition: 0.2s ease-in-out;
+}
+.socials i:hover{
+    transform: scale(1.2);
+}
+.section-title{
+    text-align: center;
+    font-size: 4rem;
+    font-weight: 600; 
+    margin-bottom: 3rem;
+}
+.experience-info {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5rem;
+}
+.experience img {
+    width: 24vw;
+    border-radius: 3rem;
+}
+.grid{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);/*cria duas colunas de tamanhos iguais*/
+    gap: 2rem; 
+}
+.grid-card{
+    border: 2px solid black;
+    border-radius: 3rem;
+    padding: 3rem;
+    display: flex;
+    flex-direction: column;
+    align-items: baseline; /*alinha os itens a esquerda*/
+    justify-content: left;
+    cursor: pointer;
+    transition: 0.2s ease-in-out;
+}
+.grid-card:hover{
+    transform: scale(1.02); /*faz com que o card aumente de tamanho quando o mouse passa por cima*/
+    background-color: black;
+    color: white;
+}
+.grid-card i{
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+}
+.grid-card span{
+    font-size: 1.5rem;
+    font-weight: 500;
+    background: linear-gradient(to right, rgb(11, 150, 192), rgb(89, 87, 134));
+    background-clip: text;
+    color: transparent;
+}
+::-webkit-scrollbar { /*para o scroll do chrome*/
+    width: 20px;
+}
+::-webkit-scrollbar-track { /*Para scroll do chrome*/
+    background-color: rgb(219, 219, 219);
+}
+::-webkit-scrollbar-thumb { /*para scroll do chrome*/
+    background: linear-gradient(to right, rgb(11, 150, 192), rgb(89, 87, 134));
+}
+.projects-grid{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /*cria colunas de tamanhos iguais e ajusta o tamanho da coluna para o tamanho da tela*/
+    gap: 2rem;
+}
+.project-card{
+    padding: 3rem 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    gap: 1.5rem;
+    border: 2px solid black;
+    border-radius: 3rem;
+    cursor: pointer;
+    transition: 0.3s ease-in-out;
+}
+.project-card:hover{
+    transform: translateY(-10px)scale(1.02); /*faz com que o card suba quando o mouse passa por cima*/
+    background-color: black;
+    color: white;
+}
+.project-card img{
+    width: 20vw;
+    border-radius: 1rem;
+}
+.project-card:hover .btn{
+    border: 2px solid white;
+    color: white;
+} 
+.project-card:hover .btn:hover{
+    border: 2px solid white;
+    background-color: white;
+    color: black;
+}
+.project-card h3{
+    font-weight: 500;
+    font-size: 2rem;
+}
+footer{
+    bottom: 0;
+    left: 0;
+    height: 10rem;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+    justify-content: center;
+}
+footer ul {
+    display: flex;
+    align-items: center;
+    gap: 3rem; 
+}
+footer ul li a {
+    color: black;
+    font-weight: 600;
 
+}
+.copyright{
+    font-size: 300;
+    margin-top: 10px;
+}
